--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-006.html
@@ -15,37 +15,21 @@
     <body>
         <div id="log"></div>
         <script type="text/javascript">
-            var defaultPosition = ' at 50% 50%';
-            // [test value,
-            //          expected property value,
-            //          expected computed style]
-            var polygon_calc_tests = [
-                ['polygon(calc(10ch) calc(10ch))',
-                        'polygon(nonzero, calc(10ch) calc(10ch))',
-                        'polygon(nonzero, 100px 100px)'],
-                ['polygon(evenodd, calc(10ch) calc(10ch))',
-                        'polygon(evenodd, calc(10ch) calc(10ch))',
-                        'polygon(evenodd, 100px 100px)'],
-                ['polygon(calc(10x + 10ex) calc(10ex + 10ex))',
-                        'polygon(nonzero, calc(10ex + 10ex) calc(10ex + 10ex))',
-                        'polygon(nonzero, 200px 200px)'],
-                ['polygon(calc(10ch) calc(10ch), calc(10ex + 10ex) calc(10ex + 10ex), 0px 200px)',
-                        'polygon(nonzero, calc(10ch) calc(10ch), calc(10ex + 10ex) calc(10ex + 10ex), 0px 200px)',
-                        'polygon(nonzero, 100px 100px, 200px 200px, 0px 200px)'],
-                ['polygon(calc(10%) calc(10%), calc(50%) calc(50%))',
-                        'polygon(nonzero, calc(10%) calc(10%), calc(50%) calc(50%))',
-                        'polygon(nonzero, 10% 10%, 50% 50%)'],
-                ['polygon(calc(100%/2) 100px)',
-                        'polygon(nonzero, calc(50%) 100px)',
-                        'polygon(nonzero, 50% 100px)'],
-                ['polygon(100px calc(25%*2))',
-                        'polygon(nonzero, 100px calc(50%))',
-                        'polygon(nonzero, 100px 50%)']
-            ];
-
-            setup(function() { ParsingUtils.setupCalcTest() });
+            var polygon_calc_tests = [];
+            ParsingUtils.calcTestValues.forEach(function(value) {
+                testCase = ['polygon('+ value[0] +' '+ value[0] +')',
+                            'polygon(nonzero, '+ value[1] +' '+ value[1] +')',
+                            'polygon(nonzero, '+ value[2] +' '+ value[2] +')'];
+                polygon_calc_tests.push(testCase);
+            });
+            ParsingUtils.calcTestValues.forEach(function(value) {
+                testCase = ['polygon(evenodd, '+ value[0] +' '+ value[0] +' '+ value[0] +' '+ value[0] +')',
+                            'polygon(evenodd, '+ value[1] +' '+ value[1] +' '+ value[1] +' '+ value[1] +')',
+                            'polygon(evenodd, '+ value[2] +' '+ value[2] +' '+ value[2] +' '+ value[2] +')'];
+                polygon_calc_tests.push(testCase);
+            });
             generate_tests(ParsingUtils.testInlineStyle, ParsingUtils.buildCalcTests(polygon_calc_tests, 'value'));
-            generate_tests(ParsingUtils.testComputedStyle, ParsingUtils.buildCalcTests(polygon_calc_tests, 'computed'), {type: 'calc'});
+            generate_tests(ParsingUtils.testComputedStyle, ParsingUtils.buildCalcTests(polygon_calc_tests, 'computed'));
         </script>
     </body>
 </html>
