change DOM flag to dom (flags are case sensitive)

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-computed-shape-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-computed-shape-000.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/css-cascade-3/#computed">
         <meta name="assert" content="The basic shape can contain relative length formats, which resolve to the computed (absolute) length value">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
