--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-008.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-008.html
@@ -6,7 +6,7 @@
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
         <meta name="assert" content="This test verifies that invalid position arguments on ellipse() don't parse">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
