--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-011.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-011.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#calc">
         <meta name="assert" content="An ellipse's <position> arguments may be in calc() values.">
-        <meta name="flags" content="DOM ahem">
+        <meta name="flags" content="dom ahem">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
