--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-notation-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-notation-000.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/cssom/#serializing-css-values">
         <meta name="assert" content="Basic shapes use functional notation, and may contain optional whitespace inside the parentheses">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
