--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-001.html
@@ -6,7 +6,7 @@
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
         <meta name="assert" content="An elliptical basic shape's radii may be keywords, lengths or percentages">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
