--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-002.html
@@ -13,7 +13,7 @@
                                 or   [ left|center|right ]
                                 or   [ left|center|right top|center|bottom ]
                                 or   [ top|center|bottom ]. ">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
