--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-006.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
         <meta name="assert" content="An ellipse's radii may be in signed positive or decimal/non-decimal format. Negative
                                      radii are invalid.">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
