--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-009.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-009.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
         <meta name="assert" content="An ellipse's position arguments may be in signed positive/negative or
                                      decimal/non-decimal format.">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
