--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-000.html
@@ -6,7 +6,7 @@
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
         <meta name="assert" content="An inset has 1 to 4 insets, and optional border radii that follow the border-radius format">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
