--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-003.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-003.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#lengths">
         <meta name="assert" content="An inset's radial component's values can be in any length unit">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
