--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-004.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-004.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
         <meta name="assert" content="These tests verify that shape-outside inset() arguments can be numbers that are signed in 
                                      positive and negative and/or decimal/non-decimal form.">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
