--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-006.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
         <meta name="assert" content="These tests verify that shape-outside inset() radial component can be numbers that are in 
                                      signed positive and/or decimal/non-decimal form. Negative values are not allowed">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
