--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-000.html
@@ -6,7 +6,7 @@
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-polygon">
         <meta name="assert" content="A polygonal basic shape has an optional fill-rule and one or more pairs of coordinates">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
