--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-000.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#typedef-basic-shape">
         <link rel="help" href="http://www.w3.org/TR/cssom/#serializing-css-values">
         <meta name="assert" content="A basic basic shape can contain any length unit type, or percentage">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
