--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-001.html
@@ -7,7 +7,7 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#typedef-basic-shape">
         <link rel="help" href="http://www.w3.org/TR/cssom/#serializing-css-values">
         <meta name="assert" content="The basic shape can contain all valid number formats">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
