--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
@@ -6,7 +6,7 @@
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
         <meta name="assert" content="Shape-outside may be a pair of shape and box values">
-        <meta name="flags" content="DOM">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
