fix spec URLs for css-shapes-1

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-010.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-010.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Circle args - calc() values</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-circle">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-circle">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#calc">
         <meta name="assert" content="A circle's arguments may be in calc() values.">
         <meta name="flags" content="dom ahem">
