--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-002.html
@@ -5,7 +5,7 @@
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-ellipse">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#lengths">
         <meta name="assert" content="An ellipse's position argument may be any of the valid combinations:
                                      [ percentage|length left|center|right ]
