--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-003.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-003.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Ellipse Invalid Position Argument Lists</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-ellipse">
         <meta name="assert" content="Valid ellipse position argument list are in the form of:
                                      [ percentage|length left|center|right ] 
                                 or   [ percentage|length left|center|right ] [ percentage|length top|center|bottom  ]
