--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-006.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Inset Radial Args - positive/negative, decimal/non-decimal</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
         <meta name="assert" content="These tests verify that shape-outside inset() radial component can be numbers that are in 
                                      signed positive and/or decimal/non-decimal form. Negative values are not allowed">
         <meta name="flags" content="dom">
