--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-000.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Basic Shape Arguments</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#typedef-basic-shape">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#typedef-basic-shape">
         <link rel="help" href="http://www.w3.org/TR/cssom/#serializing-css-values">
         <meta name="assert" content="A basic basic shape can contain any length unit type, or percentage">
         <meta name="flags" content="dom">
