--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-box-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-box-000.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Box Valid Values</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="Shape-outside may be one of the box model box values">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
