--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-006.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Circle Radii - positive/negative, decimal/non-decimal</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-circle">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-circle">
         <meta name="assert" content="A circle's radius may be in signed positive or decimal/non-decimal format. Negative
                                      radii are invalid.">
         <meta name="flags" content="dom">
