--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-008.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-008.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Circle Invalid Position Argument Values</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-circle">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-circle">
         <meta name="assert" content="This test verifies that invalid position arguments on circle() don't parse">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
