--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-computed-shape-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-computed-shape-000.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Basic Shape Computed Font Relative Lengths</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/css-cascade-3/#computed">
         <meta name="assert" content="The basic shape can contain relative length formats, which resolve to the computed (absolute) length value">
         <meta name="flags" content="dom">
