--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-computed-shape-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-computed-shape-001.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Basic Shape Computed Percentage Lengths</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <link rel="help" href="http://www.w3.org/TR/css-cascade-3/#computed">
         <meta name="assert" content="The basic shape can contain percentages, which remain unchanged when computed">
         <meta name="flags" content="dom">
