--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-001.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Ellipse Valid Radii</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-ellipse">
         <meta name="assert" content="An elliptical basic shape's radii may be keywords, lengths or percentages">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
