--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-007.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-007.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Ellipse Radii - invalid args</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-ellipse">
         <meta name="assert" content="This test verifies that invalid shape-radius arguments on ellipse() don't parse.">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
