--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-009.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-009.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Ellipse Position Arguments - positive/negative, decimal/non-decimal</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-ellipse">
         <meta name="assert" content="An ellipse's position arguments may be in signed positive/negative or
                                      decimal/non-decimal format.">
         <meta name="flags" content="dom">
