--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-000.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Inset Valid Formats</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
         <meta name="assert" content="An inset has 1 to 4 insets, and optional border radii that follow the border-radius format">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
