--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-002.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Inset Valid Rounds</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
         <meta name="assert" content="An inset's radial component has 1 to 4 length/percentages, optionally followed by a '/'
                                      and an additional 1 to 4 length/percentages and lengths can be in any unit.">
         <meta name="flags" content="dom">
