--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-005.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-005.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Inset - Invalid args</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-inset">
         <meta name="assert" content="These tests verifies that invalid inset() arguments don't parse.">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
