--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-001.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Polygon Valid Fill-Rules</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-polygon">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-polygon">
         <meta name="assert" content="A polygonal basic shape's optional fill-rule may be either 'nonzero' or 'evenodd'">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
