--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-003.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-003.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Polygon Invalid Points</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-polygon">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-polygon">
         <meta name="assert" content="A polygonal basic shape's points may be either lengths or percentages">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
