--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-none-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-none-000.html
@@ -4,7 +4,7 @@
         <title>Shape Outside - none</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">
         <meta name="assert" content="shape-outside can be explictly assigned the default value of none.">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
