--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-010.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-010.html
@@ -7,10 +7,10 @@
         <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#funcdef-circle">
         <link rel="help" href="http://www.w3.org/TR/css3-values/#calc">
         <meta name="assert" content="A circle's arguments may be in calc() values.">
-        <meta name="flags" content="dom ahem">
+        <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
-        <script src="../resources/parsing-utils.js"></script>
+        <script src="../support/parsing-utils.js"></script>
     </head>
     <body>
         <div id="log"></div>
