--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-003.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-003.html
@@ -15,7 +15,7 @@
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
-        <script src="../support/parsing-utils.js"></script>
+        <script src="support/parsing-utils.js"></script>
     </head>
     <body>
         <div id="log"></div>
